Worked on plot functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 *.slxc
 /slprj
 *.asv
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/yzACii6DA14jUpMF3VVIDmEDvcIp.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/yzACii6DA14jUpMF3VVIDmEDvcId.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/rkGDY9na3pTvzFWjzR6pf5yTqQ0p.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/rkGDY9na3pTvzFWjzR6pf5yTqQ0d.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/LA-Fhzcmlpi-P0keQYuyAXijONUp.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/LA-Fhzcmlpi-P0keQYuyAXijONUd.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/kd2q9BTJY-GuXKOGYVj4G8hY_S8p.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/kd2q9BTJY-GuXKOGYVj4G8hY_S8d.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wp.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wd.xml
+plot functions/slprj/sim/varcache/PID_Loop_2023a/varInfo.mat
+plot functions/slprj/sim/varcache/PID_Loop_2023a/tmwinternal/simulink_cache.xml
+plot functions/slprj/sim/varcache/PID_Loop_2023a/checksumOfCache.mat
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/yzACii6DA14jUpMF3VVIDmEDvcIp.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/yzACii6DA14jUpMF3VVIDmEDvcId.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/rkGDY9na3pTvzFWjzR6pf5yTqQ0p.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/rkGDY9na3pTvzFWjzR6pf5yTqQ0d.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/LA-Fhzcmlpi-P0keQYuyAXijONUp.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/LA-Fhzcmlpi-P0keQYuyAXijONUd.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/kd2q9BTJY-GuXKOGYVj4G8hY_S8p.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/kd2q9BTJY-GuXKOGYVj4G8hY_S8d.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wp.xml
+resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wd.xml
+*.xml
