Changes to 2023a simulink
- imu fixes
- changed dt
- euler angle estimation still needs work

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/kd2q9BTJY-GuXKOGYVj4G8hY_S8d.xml
 resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wp.xml
 resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wd.xml
 *.xml
+/plot functions/slprj
+/resources/plot functions/slprj
