Added control modes beta

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wd.xml
 *.xml
 /plot functions/slprj
 /resources/plot functions/slprj
+*.autosave
