Added 2023a version, updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/61Jq6-PuTmBAhTRz_8WYvQ4yL5wd.xml
 /plot functions/slprj
 /resources/plot functions/slprj
 *.autosave
+SimulinkPlant old/
